@@ -2,14 +2,14 @@
 Hash: SHA1
 
 DIST midori-0.1.1.tar.bz2 309109 RMD160 936e9f310ee1d3b9546eee8ed1806bf8d1827d53 SHA1 df1176aa584369f04e5e7e76bc4e193af0580ab0 SHA256 e0a521533e999b8541d3c8ed3cedfa6b353f66a66b2ae8c5e309485ae79bbbe7
-EBUILD midori-0.1.1.ebuild 1607 RMD160 72b8b8d80ecf18941d59fe142e425635cceca5bd SHA1 82c1af52cdf318d87e1989c693b43e597ea60a49 SHA256 ed978073f02d1c9571b9fdf1c88e7edd9b1b238786b45c0054c4eb241d1854ad
+EBUILD midori-0.1.1.ebuild 1718 RMD160 8e719c7570323cef85e52a74eed3b4e34d6e9a00 SHA1 3c8d805782899acb67c90e0f2d69bb926b7e62cd SHA256 787f3409e24d26bec8b592531780a72d8e4f477847926907379a526f5a96f51b
 EBUILD midori-9999.ebuild 1705 RMD160 84b9fc7e0557309e48ff4391b53b0443cdc83825 SHA1 2c5f2d19428060eee0dafc8c3fb4d434da9fcfce SHA256 1b2f78cfbf3d32fffb22de970c95e0248be876873f0962d635178e00370ed8be
-MISC ChangeLog 1029 RMD160 8f95b41e1b326241e47feb0d9206990022da605c SHA1 8829dcf713708292f8005e1cc694a1abb657f5b0 SHA256 3bcc38d7a8d4504be809171365b0db9a7c37c4dc7686598993d288a8c93f0bf6
+MISC ChangeLog 1169 RMD160 0733ba85717e8283c6991b6f6abc7cc52bf1920e SHA1 e2ad8bd151474177d157daa4a41d3ae2c81ad2b6 SHA256 1e03ccf724c56aa6ece80fcbb5c19c9c18d686b9bdbe50303325981a3cd8194f
 MISC metadata.xml 313 RMD160 4f246d861576fec820b0f47f72aaf2f65212c213 SHA1 b99c81d8904c399952cb052d3f199febdc686607 SHA256 3b38fde03519c5e4aee213c8a59510553b1cb6d9a24c69cc90ef0fb797a1012e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkk8TjkACgkQKhnDs22gwa8wIQCgvZ36AOCaZLB3fIicMC2tdvs6
-8P0AoI8X7bJPmd/wQn8IthUhYZwv2dQT
-=wXjW
+iEYEARECAAYFAkk9FlMACgkQKhnDs22gwa8lyACfTRiWwvfDMAqJahygS2WJxYJN
+2ZEAnisLUxiKmZThzwzTzQWywmaNyggZ
+=s34l
 -----END PGP SIGNATURE-----
