@@ -2,6 +2,9 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  08 Dec 2008; Christoph Mende <angelos@gentoo.org> midori-0.1.1.ebuild:
+  Append -lgthread-2.0 to fix compilation with forced --as-needed
+
   07 Dec 2008; Christoph Mende <angelos@gentoo.org> midori-0.1.1.ebuild,
   midori-9999.ebuild:
   Honor LDFLAGS and use the correct CC/AR
